[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Slider_test.gd" type="Script" id=1]

[node name="ui" type="Control"]
modulate = Color( 1, 0.980469, 0.980469, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -303.0
margin_bottom = 64.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="HSlider" type="HSlider" parent="."]
margin_left = 12.0
margin_top = 2.0
margin_right = 297.0
margin_bottom = 53.0
mouse_filter = 1
max_value = 15.0
step = 0.1
ticks_on_borders = true
script = ExtResource( 1 )

[node name="lumiere" type="Label" parent="."]
margin_right = 295.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "lumiere directe"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="power" type="Label" parent="."]
margin_left = 14.0
margin_top = 45.0
margin_right = 66.0
margin_bottom = 59.0
text = "Niveau :"

[node name="Label" type="Label" parent="."]
margin_left = 82.0
margin_top = 45.0
margin_right = 122.0
margin_bottom = 59.0
text = "test"

[connection signal="mouse_entered" from="HSlider" to="HSlider" method="_on_HSlider_mouse_entered"]
[connection signal="mouse_exited" from="HSlider" to="HSlider" method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="HSlider" to="HSlider" method="_on_HSlider_value_changed"]
